# hust-autologin

./: .gitignore  HUSTAutologin.py  HUSTAutologin_linux.py  README.md  pyproject.toml
setup/: linux_autostart.sh  windows_autostart.cmd  windows_autostart.ps1
src/hust_autologin/: __init__.py  core.py
