[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hust-autologin"
version = "0.1.0"
description = "HUST campus network autologin helper"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
]

[project.scripts]
hust-autologin = "hust_autologin.core:main"

[tool.setuptools.packages.find]
where = ["src"]
